--- a/app/views/active/index1.html.erb
+++ b/app/views/active/index1.html.erb
@@ -1,3 +1,4 @@
+
     <style>
       /* Always set the map height explicitly to define the size of the div
        * element that contains the map. */
@@ -13,8 +14,9 @@
       }
       
       .map_wrap {position:relative;width:100%;height:500px;}
+      
       #menu_wrap {
-        z-index: 1000x0;
+        z-index: 1000;
         position:absolute;
         top:0;
         margin-left: 450px;
@@ -66,7 +68,7 @@
 
         <div id="container" class="recm" style="background:#fff;">
 
-            <h5>이 알바는 어때요?</h5>
+            <h5>이 알바는 어때요? ver1.1.2</h5>
             
             <div style="float:right;">
             <button id="day_payment" class="btn_sort2"><i class="far fa-check-square"></i> 당일지급</button> <!-- 클릭시 클래스 추가  sort2_on -->
