--- a/app/assets/stylesheets/application.css
+++ b/app/assets/stylesheets/application.css
@@ -14,6 +14,8 @@
  *= require_self
  */
  
+ /*ver 1.1.2 */
+ 
 
 @import url("/css/notosanskr.css");
 @import url("https://fonts.googleapis.com/css?family=Montserrat&display=swap");
